--- a/package.json
+++ b/package.json
@@ -26,20 +26,22 @@
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.3.2",
     "convert-video": "^1.0.0",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^4.2.0",
     "jquery": "^3.6.0",
     "modernizr": "^3.11.8",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "ng-apexcharts": "^1.5.12",
-    "ngx-bootstrap": "^9.0.0",
-    "ngx-owl-carousel-o": "^16.0.0",
+    "ngx-bootstrap": "^12.0.0",
+    "ngx-owl-carousel-o": "^17.0.0",
     "ngx-pagination": "^6.0.2",
     "ngx-toastr": "^18.0.0",
     "ngx-webcam": "^0.4.1",
     "popper.js": "^1.16.1",
     "recordrtc": "^5.6.2",
     "rxjs": "~6.6.0",
+    "socket.io-parser": "^4.2.4",
     "tslib": "^2.3.0",
+    "ua-parser-js": "^1.0.37",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
