--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/service-worker": "^17.0.5",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@schematics/angular": "^14.0.4",
+    "@types/jsonwebtoken": "^9.0.6",
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.3.2",
     "convert-video": "^1.0.0",
     "crypto-js": "^4.2.0",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^9.0.2",
     "modernizr": "^3.11.8",
     "moment": "^2.29.4",
     "ng-apexcharts": "^1.5.12",
